refactor: extrai conversao de historico de analise